--- a/css/style.css
+++ b/css/style.css
@@ -1,78 +1,165 @@
-/* คำสั่ง ให้นร.แก้ไขไฟล์ CSS นี้ให้มีหน้าจอแสดงผลสวยงามตามที่โปรแกรมเครื่องคิดเลขควรจะเป็น
-    ตัวอย่างสามารถดูได้ในโปรแกรม calculator ใน windows 
-
-    Reference: https://www.w3schools.com/cssref/index.php
-*/
-
-/* ส่วนตัวของเว็บ */
-body{
-    /* ให้ข้อความทุกอย่างจัดอยู่ตรงกลาง */
-    text-align: center; 
-    /* ให้มีกรอบสไตล์ groove */
-    border-style: groove;
-    /* ให้มีความกว้างอย่างน้อยๆไม่ต่ำกว่า 250 pixels */
-    min-width: 250px;
+* {
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+    outline: 0;
+    transition: all 0.5s ease;
 }
 
-/* ส่วนหัวข้อของหน้าเว็บ */
-h1{
-    /* ตั้งค่าขนาดฟ้อนท์ให้ไม่เล็กกว่า 20 pixels และใหญ่เท่ากับ 20px บวกกับ 3% ของ viewport ฝั่งที่เล็กสุด */
-    font-size: calc(20px + 3vmin);
+body {
+    font-family: sans-serif;
 }
 
-/* ส่วนตัวเครื่องคิดเลข */
-#calc{
-
+a {
+    text-decoration: none;
+    color: #fff;
 }
 
-/* ส่วนแสดงผลตัวเลข */
-#outputPanel{
-    /* ให้ตำแหน่งของ element ต่างๆภายใต้ส่วนนี้ขึ้นกับขนาดของ outputPanel */
+body {
+    background-image: linear-gradient( to bottom right, rgba(79,51,176,1.0),rgba(210,53,165));
+}
+h1 {
+    color: #adf9e7;
+}
+.container {
+    height: 100vh;
+    width: 100vw;
+    display: grid;
+    place-items: center;
+}
+
+.calculator {
     position: relative;
-    /* ให้แสดงผลเป็นประเภท inline แทน คือความกว้างไม่สุดจอ */
-    display: inline-block;
-
-    /* กว้าง 40% ของจอ สูง 10% ของจอ */
-    width: 40vw;
-    height: 10vh;
-
-    /* กว้างไม่ต่ำกว่า 200 pixels   */
-    min-width: 200px;
-    
+    height: auto;
+    width: auto;
+    padding: 20px;
+    border-radius: 10px;
+    box-shadow: 0 0 30px #000;
 }
 
-#inputPanel{
-    position: relative;
-    display: inline-block;
+.theme-toggler {
+    position: absolute;
+    top: 30px;
+    right: 30px;
+    color: #fff;
+    cursor: pointer;
+    z-index: 1;
 }
 
-#display{
-    text-align: left;
-    width: 100%;
-    height: 100%;
-    font-size: calc(12px + 1vmin);
+.theme-toggler.active {
+    color: #333;
 }
 
-.bt{
-
+.theme-toggler.active::before {
+    background-color: #fff;
 }
 
-.bt-num{
-
+.theme-toggler::before {
+    content: '';
+    height: 30px;
+    width: 30px;
+    position: absolute;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    border-radius: 50%;
+    background-color: #333;
+    z-index: -1;
 }
 
-.bt-ops{
+#display {
+    margin: 0 10px;
+    height: 150px;
+    width: auto;
+    max-width: 270px;
+    display: flex;
+    align-items: flex-end;
+    justify-content: flex-end;
+    font-size: 30px;
+    margin-bottom: 20px;
+    overflow-x: scroll;
+  }
 
+#display::-webkit-scrollbar {
+    display: block;
+    height: 3px;
 }
 
-.bt-del{
-
+button {
+    height: 60px;
+    width: 60px;
+    border: 0;
+    border-radius: 30px;
+    margin: 5px;
+    font-size: 20px;
+    cursor: pointer;
+    transition: all 200ms ease;
 }
 
-.bt-clear{
-
+button:hover {
+    transform: scale(1.1);
 }
 
-.bt-optional{
-
+button#equal {
+    height: 130px;
 }
+
+/* light theme */
+
+.calculator {
+    background-color: #fff;
+}
+
+.calculator #display {
+    color: #0a1e23;
+}
+
+.calculator button#clear {
+    background-color: #ffd5d8;
+    color: #fc4552;
+}
+
+.calculator button.btn-number {
+    background-color: #c3eaff;
+    color: #000000;
+}
+
+.calculator button.btn-operator {
+    background-color: #ffd0fb;
+    color: #f967f3;
+  }
+  
+  .calculator button.btn-equal {
+    background-color: #adf9e7;
+    color: #000;
+  }
+
+  /* dark theme */
+
+  .calculator.dark {
+    background-color: #071115;
+  }
+
+  .calculator.dark #display {
+    color: #f8fafb;
+  }
+
+  .calculator.dark button#clear {
+    background-color: #2d191e;
+    color: #bd3740;
+  }
+
+  .calculator.dark button.btn-number {
+    background-color: #1b2f38;
+    color: #f8fafb;
+  }
+
+  .calculator.dark button.btn-operator {
+    background-color: #2e1f39;
+    color: #aa00a4;
+  }
+  
+  .calculator.dark button.btn-equal {
+    background-color: #223323;
+    color: #ffffff;
+  }
+  
